[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/GunFight/WesternBoi.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Minigames/GunFight/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "bullet"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Legs/Right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Legs/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Gun:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=2]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Legs/Right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Legs/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Gun:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Legs/Right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Legs/Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 1,
"values": [ Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Gun:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[node name="WesternBoi" type="KinematicBody2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Body" type="Sprite" parent="Sprite"]

[node name="Sprite" type="Sprite" parent="Sprite/Body"]
scale = Vector2( 1.5, 2 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite/Body"]
position = Vector2( 0, -37.5 )
texture = ExtResource( 1 )

[node name="Arms" type="Sprite" parent="Sprite"]

[node name="Sprite" type="Sprite" parent="Sprite/Arms"]
position = Vector2( 28, -13 )
scale = Vector2( 0.75, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Sprite/Arms"]
position = Vector2( 31.125, 2.6 )
scale = Vector2( 0.5, 0.75 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite/Arms"]
position = Vector2( -28, -13 )
scale = Vector2( 0.75, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Sprite/Arms"]
position = Vector2( -31.125, 2.6 )
scale = Vector2( 0.5, 0.75 )
texture = ExtResource( 1 )

[node name="Legs" type="Sprite" parent="Sprite"]

[node name="Right" type="Sprite" parent="Sprite/Legs"]

[node name="Sprite2" type="Sprite" parent="Sprite/Legs/Right"]
position = Vector2( 9.5, 37.5 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Sprite/Legs/Right"]
position = Vector2( 22, 43.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Left" type="Sprite" parent="Sprite/Legs"]
position = Vector2( 0, -10 )

[node name="Sprite" type="Sprite" parent="Sprite/Legs/Left"]
position = Vector2( -9.5, 37.5 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Sprite/Legs/Left"]
position = Vector2( -22, 43.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Gun" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( -43.6, 8.825 )
scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 1 )

[node name="Hat" type="Sprite" parent="Sprite"]

[node name="Sprite" type="Sprite" parent="Sprite/Hat"]
position = Vector2( 0, -52 )
scale = Vector2( 2, 0.25 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite/Hat"]
position = Vector2( 0, -64.5 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Hit" type="Sprite" parent="Sprite"]
visible = false

[node name="Sprite" type="Sprite" parent="Sprite/Hit"]
position = Vector2( 12.5, -90 )
rotation = 0.383972
scale = Vector2( 0.25, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Sprite/Hit"]
position = Vector2( 25, -80 )
rotation = 0.785398
scale = Vector2( 0.25, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Sprite/Hit"]
position = Vector2( -12.5, -90 )
rotation = -0.383972
scale = Vector2( 0.25, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Sprite/Hit"]
position = Vector2( -25, -80 )
rotation = -0.785398
scale = Vector2( 0.25, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12.4544, -48.8295, 12.4105, -48.8799, 12.4848, -19.1637, 37.3438, -19.2163, 37.4282, -6.81249, 18.7169, -6.7529, 18.7401, 25.0048, 15.759, 25.0324, 15.8298, 49.9971, 3.26927, 50.0313, 3.27889, 25.0494, -3.30659, 25.0437, -3.26531, 49.9694, -15.7277, 50.026, -15.857, 24.9941, -18.6349, 24.9445, -18.6854, -6.80589, -37.499, -6.89738, -37.375, -19.3347, -12.4707, -19.0778 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bullet = SubResource( 1 )
anims/static = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="NumberOfBullet" type="Sprite" parent="."]
offset = Vector2( 218.249, 10 )

[node name="Bullet" type="Sprite" parent="NumberOfBullet"]
position = Vector2( 48.3516, 28.5905 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NumberOfBullet/Bullet"]
position = Vector2( 2, 0 )
scale = Vector2( 0.75, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="NumberOfBullet/Bullet"]
position = Vector2( -8, 0 )
scale = Vector2( 0.5, 0.375 )
texture = ExtResource( 1 )

[node name="Bullet2" type="Sprite" parent="NumberOfBullet"]
position = Vector2( 64.3516, 28.5905 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NumberOfBullet/Bullet2"]
position = Vector2( 2, 0 )
scale = Vector2( 0.75, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="NumberOfBullet/Bullet2"]
position = Vector2( -8, 0 )
scale = Vector2( 0.5, 0.375 )
texture = ExtResource( 1 )

[node name="Bullet3" type="Sprite" parent="NumberOfBullet"]
position = Vector2( 81.3516, 28.5905 )
rotation = 1.5708
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NumberOfBullet/Bullet3"]
position = Vector2( 2, 0 )
scale = Vector2( 0.75, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="NumberOfBullet/Bullet3"]
position = Vector2( -8, 0 )
scale = Vector2( 0.5, 0.375 )
texture = ExtResource( 1 )

[node name="Shield" type="Sprite" parent="."]

[node name="Sprite" type="Sprite" parent="Shield"]
position = Vector2( 63, -30 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Shield"]
position = Vector2( 63, -23 )
scale = Vector2( 0.75, 1 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -12.4544, -48.8295, 12.4105, -48.8799, 12.4848, -19.1637, 37.3438, -19.2163, 37.4282, -6.81249, 18.7169, -6.7529, 18.7401, 25.0048, 15.759, 25.0324, 15.8298, 49.9971, 3.26927, 50.0313, 3.27889, 25.0494, -3.30659, 25.0437, -3.26531, 49.9694, -15.7277, 50.026, -15.857, 24.9941, -18.6349, 24.9445, -18.6854, -6.80589, -37.499, -6.89738, -37.375, -19.3347, -12.4707, -19.0778 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="Recharge" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="Recharge" to="." method="_on_Recharge_timeout"]
